<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>libcxxcanard</name>
  <version>0.2.0</version>
  <description>Cyphal transport support library shared by Silverhand control packages.</description>

  <maintainer email="team@silverhand.local">Silverhand Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
